<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ConvexHull Android</string>
    <string name="action_settings">Configuración</string>
    <string name="paso_paso">Paso a paso</string>
    <string name="directo">Directo</string>
    <string name="retardo">Retardo</string>
    <string name="tiempoRetardo">Tiempo de retardo</string>
    <string name="action_list">Lista Puntos</string>
    <string name="cancel">cancel</string>
    <string name="listaPuntos">Lista de Puntos</string>
    <string name="ok">OK</string>
    <string name="franjas">Numero Franjas</string>
    <string name="puntosLabel">Nº Puntos</string>
    <string name="textAddArista">Añade arista</string>
    <string name="textDeleteArista">Borra Arista</string>
    <string name="method">Método: </string>
    <string name="nextStep">Siguiente Paso</string>
    <string name="add">Añadir Puntos</string>
    <string name="info">Informacion del algoritmo</string>
    <string name="dyvalgorithm">Divide y Venceras</string>
    <string name="andrew">Andrew</string>
    <string name="graham">Scan Graham</string>
    <string name="incremental">Incremental</string>
    <string name="jarvis">Jarvis</string>
    <string name="quickhull">Quickhull</string>
    <string name="aproxInferior">Apr.Inferior</string>
    <string name="aproxSuperior">Apr.Superior</string>
    <string name="busqAristas">Busq.Aristas</string>
    <string name="eliminacionPtosInteriores">Ptos.Interiores</string>
    <string name="andrew_c_1">Ordenamos la lista</string>
    <string name="andrew_c_2">Dividimos los puntos</string>
    <string name="andrew_c_3">Scan de graham subconjunto superior</string>
    <string name="andrew_c_4">Scan de graham subconjunto inferior</string>
    <string name="graham_c_1"><![CDATA[Giro a la izquierda -> continuar]]></string>
    <string name="graham_c_2"><![CDATA[No es giro a la izquierda -> retroceder]]></string>
    <string name="graham_c_4">Elegimos punto interior</string>
    <string name="graham_c_5">Ordenacion a través del punto interior</string>
    <string name="graham_c_6">Añadir arista final</string>
    <string name="busqueda_c_1">No es arista</string>
    <string name="busqueda_c_2">Es arista</string>
    <string name="busqueda_c_3">Ambas son aristas</string>
    <string name="dyv_c_1">Buscamos Cierre Izqda</string>
    <string name="dyv_c_2">Buscamos Cierre Dcha</string>
    <string name="dyv_c_3">Añadimos Soporte Inferior</string>
    <string name="dyv_c_4">Añadimos Soporte Superior</string>
    <string name="dyv_c_5">Punto Unico.Cierre Encontrado</string>
    <string name="ptoInterior_c_1">Punto Interior al triangulo</string>
    <string name="ptoInterior_c_2">Pintamos el cc</string>
    <string name="incremental_c_1">Ordenamos Lista por abscisas</string>
    <string name="incremental_c_2">Nuevo Punto</string>
    <string name="incremental_c_3">Añadimos Soporte Inferior</string>
    <string name="incremental_c_4">Añadimos Soporte Superior</string>
    <string name="incremental_c_5">Actualizamos Cierre</string>
    <string name="jarvis_c_1">Buscando Menor Ordenada</string>
    <string name="jarvis_c_2">Cambiando de Pivote</string>
    <string name="jarvis_c_3">Añadiendo arista al Cierre Convexo</string>
    <string name="jarvis_c_4">Buscando Arista</string>
    <string name="jarvis_c_5">Finalizado el cierre convexo</string>
    <string name="quickhull_c_1">Elegida primera arista del CC</string>
    <string name="quickhull_c_2">Es triángulo mayor</string>
    <string name="aprox_c_1">Puntos máximos y mínimos</string>
    <string name="cc_c_1">Fin del cierre convexo</string>
    <string name="MEC">Circulo Minimo</string>
    <string name="mec_1">Circulo Minimo encontrado</string>
    <string name="mec_2">MEC encontrado pero no minimo</string>
    <string name="mec_3">Circulo que no contiene todos los puntos</string>
    <string name="title_web_view">Descripcion Algoritmo</string>
    <string name="title_activity_descriptionwebview2">Descripción Algoritmo</string>
    <string name="punto">Punto :</string>
    <string name="ptoInterior_c_3">Pintamos el punto geografico</string>
    <string name="ptoInterior_c_3b">centroide</string>
    <string name="action_help">Ayuda</string>
    <string name="action_search">Buscar</string>
    <string name="action_compose">Componer</string>
    <string name="hello_world">prueba</string>
    <string name="oncircle">circulo</string>
    <string name="onsquare">cuadrado</string>
    <string name="incircle">circulo int.</string>
    <string name="insquare">cuadrado int.</string>
    <string name="randomType">Tipo Aleatorio</string>
    <string name="settings_tittle">Configuración</string>
    <string name="pointListTitle">Lista de Puntos</string>

</resources>
